--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "piet-cairo",
     "piet-common",
     "piet-direct2d",
+    "piet-skia",
     "piet-test",
     "piet-web",
     "piet-web/examples/basic",
