--- a/piet-skia/Cargo.toml
+++ b/piet-skia/Cargo.toml
@@ -15,4 +15,5 @@ skia-safe = "0.27.0"
 unicode-segmentation = "1.3.0"
 
 [dev-dependencies]
+image = "0.22.4"
 piet-test = { version = "0.0.9", path = "../piet-test" }
