Add basic implementation of piet-core-graphics

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Cargo.lock
 .DS_Store
 .cargo
 
+## Intellij Idea project configuration files
+.idea/
+## VScode project configuration files
+.vscode/
+
