--- a/piet-common/Cargo.toml
+++ b/piet-common/Cargo.toml
@@ -11,19 +11,27 @@ keywords = ["graphics", "2d"]
 [features]
 d2d = ["piet-direct2d"]
 cairo = ["piet-cairo", "cairo-rs"]
+cg = ["piet-core-graphics", "core-foundation", "core-graphics"]
 web = ["piet-web"]
 
 [dependencies]
 cfg-if = "0.1.10"
 piet = { version = "0.0.12", path = "../piet" }
 piet-cairo = { version = "0.0.12", path = "../piet-cairo", optional = true }
+piet-core-graphics = { version = "0.0.12", path = "../piet-core-graphics", optional = true }
 piet-direct2d = { version = "0.0.12", path = "../piet-direct2d", optional = true }
 piet-web = { version = "0.0.12", path = "../piet-web", optional = true }
 cairo-rs = { version = "0.8.1", default_features = false, optional = true}
+core-foundation = { version = "0.7.0", git = "https://github.com/servo/core-foundation-rs.git", rev = "508a3728950759116f05f9eecd72d74d2555fa6c", optional = true }
+core-graphics = { version = "0.19.0", git = "https://github.com/servo/core-foundation-rs.git", rev = "508a3728950759116f05f9eecd72d74d2555fa6c", optional = true }
+
 
 [target.'cfg(not(any(target_arch="wasm32", target_os="windows")))'.dependencies]
 piet-cairo = { version = "0.0.12", path = "../piet-cairo" }
+piet-core-graphics = { version = "0.0.12", path = "../piet-core-graphics" }
 cairo-rs = { version = "0.8.1", default_features = false}
+core-foundation = { version = "0.7.0", git = "https://github.com/servo/core-foundation-rs.git", rev = "508a3728950759116f05f9eecd72d74d2555fa6c" }
+core-graphics = { version = "0.19.0", git = "https://github.com/servo/core-foundation-rs.git", rev = "508a3728950759116f05f9eecd72d74d2555fa6c" }
 png = { version = "0.16.1", optional = true }
 
 [target.'cfg(target_os="windows")'.dependencies]
